added cluster_id and options in the databases
